k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: postgres:14-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: db-storage
        - mountPath: /docker-entrypoint-initdb.d/init.sql
          name: db-init-script-volume
          subPath: init.sql
      volumes:
      - name: db-storage
        persistentVolumeClaim:
          claimName: db-pvc
      - name: db-init-script-volume
        configMap:
          name: db-init-script-configmap
