k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
spec:
  serviceAccountName: app-viewer-sa
  containers:
  - name: alpine
    image: alpine
    command: ["sleep", "3600"]
