k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web

spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: web-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: web

spec:
  type: NodePort
  selector:
    app: web
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
